Lets add some CONFIG to that cooldown

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -316,6 +316,7 @@ Commands:
         Enabled: true
     ptp:
         Enabled: true
+        Cooldown: 30
     p:
         Enabled: true
         Display_Names: true
