--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -147,6 +147,7 @@ Skills:
             SmoothBrick_To_MossyBrick: true
             Dirt_To_Grass: true
         Hunger_Bonus: true
+        Instant_Wheat_Regrowth: true
     Mining:
         Level_Cap: 0
         Requires_Pickaxe: true
