Added config value to enable/disable power level display w/ Spout

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -340,6 +340,7 @@ Spout:
             Enabled: true
             Show_Display_Name: false
     HUD:
+        Show_Power_Level: true
         Default: STANDARD
         Retro:
             Colors:
