Added natural Iron Golems to exp table

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -271,6 +271,7 @@ Experience:
             Ender_Dragon: 8.0
             Slime: 2.0
             Ghast: 3.0
+            Iron_Golem: 2.0
 #
 #  Settings for commands
 ###
