--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -38,6 +38,7 @@ Hardcore:
     Enabled: false
     Death_Stat_Loss_Penalty_Percentage: 75
     Vampirism: false
+    Vampirism_Stat_Leech_Percentage: 5
 
 #
 #  Settings for mcMMO items
