Start of work on allowing custom tool/block mods. This version should allow for XP gain from vanilla blocks with custom tools. Please report any issues to facilitate further development.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -41,6 +41,13 @@ Hardcore:
     Vampirism_Stat_Leech_Percentage: 5
 
 #
+#  Settings for SMP Mods
+###
+Mods:
+    Tool_Mods_Enabled: false
+    Block_Mods_Enabled: false
+
+#
 #  Settings for mcMMO items
 ###
 Items:
