Custom tools - modify XP gain from breaking blocks on a per tool basis.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -45,7 +45,7 @@ commands:
         aliases: []
         description: Make yourself invulnerable
     mcstats:
-        aliases: []
+        aliases: [/stats]
         description: Shows your mcMMO stats and xp
     mcremove:
         aliases: []
