--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -264,6 +264,8 @@ permissions:
             mcmmo.ability.repair.armorrepair: true
             mcmmo.ability.repair.toolrepair: true
             mcmmo.ability.repair.stringrepair: true
+            mcmmo.ability.repair.othermaterialrepair: true
+            mcmmo.ability.repair.otherrepair: true
     mcmmo.ability.repair.repairbonus:
         description: Allows access to Super Repair bonus
     mcmmo.ability.repair.repairmastry:
@@ -288,6 +290,10 @@ permissions:
         description: Allows ability to repair tools
     mcmmo.ability.repair.stringrepair:
         description: Allows ability to repair Bow and Fishing rod
+    mcmmo.ability.repair.othermaterialrepair:
+        description: Allows ability to repair items of material type OTHER
+    mcmmo.ability.repair.otherrepair:
+        description: Allows ability to repair items of type OTHER
     mcmmo.ability.unarmed.*:
         description: Allows access to all Unarmed abilities
         children:
